test/SemanticAnalysis/Names/DuplicateFunction.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

void function() { }

// CHECK: .loci:7:6: error: function 'function' clashes with existing name
void function() { }

// CHECK: 1 error generated.
